--- a/style.css
+++ b/style.css
@@ -9,3 +9,19 @@
 :root {
   font-size: 65.5%;
 }
+
+#app {
+  display: grid;
+  grid-template-rows: max-content 1fr max-content;
+  height: 100vh;
+}
+
+.container {
+  padding: 1.6rem 3.2rem;
+  width: min(112rem, 100%);
+  margin: 0 auto;
+}
+
+main {
+  overflow-y: scroll;
+}
