--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@
 
 :root {
   font-size: 65.5%;
+
+  --color-base-white: #ffffff;
+  --color-base-gray-100: #f5f5f5;
+  --color-base-gray-300: #8d8d99;
+  --color-base-gray-900: #202024;
+}
+
+body {
+  font-size: 1.6rem;
+  background-color: var(--color-base-white);
+  color: var(--color-base-gray-900);
 }
 
 #app {
